<resources>
    <string name="app_name">qlntUsers</string>
    <string name="title_home">Home</string>
    <string name="title_search">Tìm Kiếm</string>
    <string name="title_post">Đăng Bài</string>
    <string name="title_user">User</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="ten">Tên:</string>
    <string name="tuoi">Tuổi:</string>
    <string name="sdt">SDT liên hệ:</string>
    <string name="diachi">Địa chỉ trọ:</string>
    <string name="gia">Giá phòng:</string>
    <string name="dientich">Diện tích:</string>
    <string name="gioitinh">Giới tính:</string>
    <string name="hinhthucdang">Hình thức đăng</string>
    <string name="tinh">Tỉnh/TP</string>
    <string name="huyen">Quận/Huyện</string>
    <string name="loaitin">Loại tin đăng</string>
    <string name="thongtinphong">Thông tin phòng trọ:</string>
    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
