<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:paddingBottom="60dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/ten"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/ten"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:inputType="text"
                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/tuoi"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/tuoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/gioitinh"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_gioitinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gioi_tinh"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/sdt"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/sdtlh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:textColor="@color/color3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/tinh"
                    android:layout_weight="1"
                    android:textColor="@color/color3" />
                <Spinner
                    android:id="@+id/spiner_tinh"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></Spinner>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:text="@string/huyen"
                    android:textColor="@color/color3" />
                <Spinner
                    android:id="@+id/spiner_huyen"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></Spinner>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/diachi"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/diachi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/gia"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/giatien"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColor="@color/color3" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="Số ngày"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/songay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_loaingay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gia_tien"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/hinhthucdang"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_hinhthucdang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/hinh_thuc_dang"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/loaitin"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_loaitin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/loai_tin"></Spinner>
            </LinearLayout>
            <!--        <TextView-->
            <!--            android:layout_marginTop="10dp"-->
            <!--            android:layout_marginBottom="10dp"-->
            <!--            android:textColor="@color/color3"-->
            <!--            android:text="@string/thongtinphong"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content" />-->
            <!--        <TableLayout-->
            <!--            android:layout_gravity="center"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content">-->
            <!--            <TableRow-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent" >-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox3"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Ở với chủ" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox2"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Nhà vệ sinh trong" />-->
            <!--            </TableRow>-->
            <!--            <TableRow-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent" >-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox1"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Có gác lửng" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox6"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Giờ giới nghiêm" />-->
            <!--            </TableRow>-->
            <!--            <TableRow-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent" >-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox5"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Cho nấu ăn" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox4"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Cổng khóa" />-->
            <!--            </TableRow>-->
            <!--        </TableLayout>-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="Thêm hình ảnh"
                    android:textColor="@color/color3"></TextView>

                <Button

                    android:id="@+id/btchontep"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/add" />

                <ImageView
                    android:id="@+id/imv"
                    android:layout_width="@dimen/img_view_upload_width"
                    android:layout_height="@dimen/img_view_upload_height" />

            </LinearLayout>

            <Button
                android:id="@+id/btluu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="Hoàn tất và thanh toán"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

